# pyctools

./: .gitignore  .readthedocs.yaml  CHANGELOG.txt  CONTRIBUTING.rst  MANIFEST.in  README.rst  pyproject.toml  setup.py
examples/cython/: pyproject.toml  setup.py  test_zigzag.py
examples/simple/: pyproject.toml  setup.py
examples/simple/src/pyctools/components/example/: flip.py
src/: contributors.txt
src/doc/: conf.py  index.rst  requirements.txt
src/doc/manual/: getting_started.rst  index.rst  installation.rst  introduction.rst  writing_components.rst
src/examples/cython/: setup.py  test_zigzag.py
src/examples/cython/src/pyctools/components/example/: zigzag.py  zigzagcore.pyx
src/examples/simple/: setup.py  test_flip.py
src/examples/simple/src/pyctools/components/example/: flip.py
src/pyctools/: setup.py
src/pyctools/components/: adder.py  arithmetic.py  framerepeat.py  modulate.py  subtracter.py
src/pyctools/components/colourspace/: __init__.py  adjustsaturation.py  extractcomps.py  gammacorrection.py  gammacorrectioncore.pyx  histogramequalisation.py  levels.py  matrices.py  matrix.py  quantise.py  rgbtoy.py  rgbtoyuv.py  yuvtorgb.py
src/pyctools/components/deinterlace/: __init__.py  halfsize.py  hhiprefilter.py  insertzero.py  intrafield.py  simple.py  weston3field.py
src/pyctools/components/fft/: __init__.py  fft.py  tile.py  window.py
src/pyctools/components/hardware/: sanescanner.py
src/pyctools/components/interp/: __doc__.py  filterdesign.py  filtergenerator.py  gaussianfilter.py  imageresizer.py  resize.py  resizecore.pyx
src/pyctools/components/io/: __doc__.py  dumpmetadata.py  imagedisplay.py  imagefilecv.py  imagefilepil.py  imagefilereader.py  imagefilewriter.py  imagesequencereader.py  plotdata.py  rawfilereader.py  rawfilewriter.py  rawimagefilereader.py  rawimagefilereader2.py  videofilereader.py  videofilereader2.py  videofilewriter.py  videofilewriter2.py
src/pyctools/components/modulate/: __doc__.py  modulate.py  modulatecore.pyx
src/pyctools/components/noisereduce/: __init__.py  medianfilter.py  nonlocalmeansdenoise.py
src/pyctools/components/photo/: __doc__.py  colourcorrect.py  reorient.py  unsharpmask.py  vignettecorrector.py
src/pyctools/components/plumbing/: busbar.py  collator.py
src/pyctools/components/qt/: qtdisplay.py  showhistogram.py
src/pyctools/components/zone/: __init__.py  zoneplategenerator.py  zoneplategeneratorcore.pyx
src/pyctools/core/: __init__.py  base.py  component.py  compound.py  config.py  frame.py  metadata.py  objectpool.py  qt.py  rawfilereader.py  transformer.py  types.py  yuvtorgb.py
src/pyctools/core/tools/: set-metadata.py
src/pyctools/extensions/: resize.c  resize.pyx  zone.pyx
src/pyctools/tools/: editor.py  setmetadata.py
utils/: build_docs.py  tag_release.py
