#  Pyctools - a picture processing algorithm development kit.
#  http://github.com/jim-easterbrook/pyctools
#  Copyright (C) 2023-25  Pyctools contributors
#
#  This file is part of Pyctools.
#
#  Pyctools is free software: you can redistribute it and/or
#  modify it under the terms of the GNU General Public License as
#  published by the Free Software Foundation, either version 3 of the
#  License, or (at your option) any later version.
#
#  Pyctools is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
#  General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with Pyctools.  If not, see <http://www.gnu.org/licenses/>.

[build-system]
requires = ["setuptools >= 59.6", "toml", "numpy", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "pyctools.core"
version = "0.8.0"
description = "Picture processing algorithm development kit"
readme = "README.rst"
license = {text = "GNU GPL"}
authors = [{name = "Jim Easterbrook", email = "jim@jim-easterbrook.me.uk"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: MacOS",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: BSD :: FreeBSD",
    "Operating System :: POSIX :: BSD :: NetBSD",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Visualization",
]
requires-python = ">= 3.6"
dynamic = ["scripts"]
dependencies = [
    "docutils",
    "exiv2 >= 0.11",
    "numpy < 2",
    "pillow",
]

[project.optional-dependencies]
# Qt options - only one required
PyQt5 = ["PyQt5 >= 5.9"]
PyQt6 = [
  "pyctools-core[PyQt6-linux];  platform_system == 'Linux'",
  "pyctools-core[PyQt6-darwin]; platform_system == 'Darwin'",
]
PySide2 = [
  "PySide2 >= 5.11.1; python_version < '3.8'",
  "PySide2 >= 5.14;   python_version >= '3.8'",
]
PySide6 = [
  "pyctools-core[PySide6-linux];  platform_system == 'Linux'",
  "pyctools-core[PySide6-darwin]; platform_system == 'Darwin'",
]
PyQt6-linux = [
  "PyQt6 >= 6.2;        python_version != '3.6.*'",
  "PyQt6 >= 6.2, < 6.3; python_version == '3.6.*'",
  "PyQt6-Qt6 < 6.3;     python_version == '3.6.*'",
]
PyQt6-darwin = [
  "PyQt6 >= 6.2",
  "PyQt6-Qt6 >= 6.2, != 6.6.1",
]
PySide6-linux = ["PySide6 >= 6.2"]
PySide6-darwin = ["PySide6 >= 6.2, != 6.6.1"]
# other packages
cv2 = ["pyctools-core[OpenCV]"]
matplotlib = ["matplotlib"]
OpenCV = [
  "opencv-python-headless;       python_version != '3.6.*'",
  "opencv-python-headless < 4.7; python_version == '3.6.*'",
]
OpenGL = ["pyctools-core[PyOpenGL]"]
PyOpenGL = ["PyOpenGL", "PyOpenGL-accelerate"]
rawkit = ["rawkit"]
rawpy = ["rawpy"]
SciPy = ["scipy"]
# install everything except a Qt package
all = ["pyctools-core[matplotlib,OpenCV,PyOpenGL,rawkit,rawpy,SciPy]"]

[project.urls]
homepage = "https://github.com/jim-easterbrook/pyctools"
documentation = "https://pyctools.readthedocs.io/"
repository = "https://github.com/jim-easterbrook/pyctools"
changelog = "https://github.com/jim-easterbrook/pyctools/blob/main/CHANGELOG.txt"

[tool.setuptools]
platforms = ["POSIX", "MacOS"]
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyctools*"]
